// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Banner inpage Image renders correctly 1`] = `
<jest>
  <section
    class="ecl-banner-inpage ecl-banner-inpage--font-m"
  >
    <div
      class="ecl-banner-inpage__header"
    >
      <div
        class="ecl-container"
      >
        In focus
      </div>
    </div>
    <a
      class="ecl-banner-inpage__link"
      href="/example"
    >
      <figure
        class="ecl-banner-inpage__picture-container"
      >
        <picture
          class="ecl-picture ecl-banner-inpage__picture"
          data-ecl-banner-inpage-image=""
        >
          <img
            alt="alternative text"
            class="ecl-banner-inpage__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
          />
        </picture>
      </figure>
      <div
        class="ecl-banner-inpage__container"
        data-ecl-banner-inpage-container=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-banner-inpage__title"
          >
            Lorem ipsum dolor sit amet, adipiscing justo
          </div>
          <div
            aria-hidden="true"
            class="ecl-banner-inpage__anchor"
          />
          <footer
            class="ecl-banner-inpage__credit"
          >
            © Copyright
          </footer>
        </div>
      </div>
    </a>
  </section>
</jest>
`;

exports[`Banner inpage Image renders correctly with extra attributes 1`] = `
<jest>
  <section
    class="ecl-banner-inpage ecl-banner-inpage--font-m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-banner-inpage__header"
    >
      <div
        class="ecl-container"
      >
        In focus
      </div>
    </div>
    <a
      class="ecl-banner-inpage__link"
      href="/example"
    >
      <figure
        class="ecl-banner-inpage__picture-container"
      >
        <picture
          class="ecl-picture ecl-banner-inpage__picture"
          data-ecl-banner-inpage-image=""
        >
          <img
            alt="alternative text"
            class="ecl-banner-inpage__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
          />
        </picture>
      </figure>
      <div
        class="ecl-banner-inpage__container"
        data-ecl-banner-inpage-container=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-banner-inpage__title"
          >
            Lorem ipsum dolor sit amet, adipiscing justo
          </div>
          <div
            aria-hidden="true"
            class="ecl-banner-inpage__anchor"
          />
          <footer
            class="ecl-banner-inpage__credit"
          >
            © Copyright
          </footer>
        </div>
      </div>
    </a>
  </section>
</jest>
`;

exports[`Banner inpage Image renders correctly with extra class names 1`] = `
<jest>
  <section
    class="ecl-banner-inpage ecl-banner-inpage--font-m custom-class custom-class--test"
  >
    <div
      class="ecl-banner-inpage__header"
    >
      <div
        class="ecl-container"
      >
        In focus
      </div>
    </div>
    <a
      class="ecl-banner-inpage__link"
      href="/example"
    >
      <figure
        class="ecl-banner-inpage__picture-container"
      >
        <picture
          class="ecl-picture ecl-banner-inpage__picture"
          data-ecl-banner-inpage-image=""
        >
          <img
            alt="alternative text"
            class="ecl-banner-inpage__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
          />
        </picture>
      </figure>
      <div
        class="ecl-banner-inpage__container"
        data-ecl-banner-inpage-container=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-banner-inpage__title"
          >
            Lorem ipsum dolor sit amet, adipiscing justo
          </div>
          <div
            aria-hidden="true"
            class="ecl-banner-inpage__anchor"
          />
          <footer
            class="ecl-banner-inpage__credit"
          >
            © Copyright
          </footer>
        </div>
      </div>
    </a>
  </section>
</jest>
`;

exports[`Banner inpage Image renders correctly without credit 1`] = `
<jest>
  <section
    class="ecl-banner-inpage ecl-banner-inpage--font-m"
  >
    <div
      class="ecl-banner-inpage__header"
    >
      <div
        class="ecl-container"
      >
        In focus
      </div>
    </div>
    <a
      class="ecl-banner-inpage__link"
      href="/example"
    >
      <figure
        class="ecl-banner-inpage__picture-container"
      >
        <picture
          class="ecl-picture ecl-banner-inpage__picture"
          data-ecl-banner-inpage-image=""
        >
          <img
            alt="alternative text"
            class="ecl-banner-inpage__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
          />
        </picture>
      </figure>
      <div
        class="ecl-banner-inpage__container"
        data-ecl-banner-inpage-container=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-banner-inpage__title"
          >
            Lorem ipsum dolor sit amet, adipiscing justo
          </div>
          <div
            aria-hidden="true"
            class="ecl-banner-inpage__anchor"
          />
        </div>
      </div>
    </a>
  </section>
</jest>
`;

exports[`Banner inpage Image renders correctly without header 1`] = `
<jest>
  <section
    class="ecl-banner-inpage ecl-banner-inpage--font-m"
  >
    <a
      class="ecl-banner-inpage__link"
      href="/example"
    >
      <figure
        class="ecl-banner-inpage__picture-container"
      >
        <picture
          class="ecl-picture ecl-banner-inpage__picture"
          data-ecl-banner-inpage-image=""
        >
          <img
            alt="alternative text"
            class="ecl-banner-inpage__image"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
          />
        </picture>
      </figure>
      <div
        class="ecl-banner-inpage__container"
        data-ecl-banner-inpage-container=""
      >
        <div
          class="ecl-container"
        >
          <div
            class="ecl-banner-inpage__title"
          >
            Lorem ipsum dolor sit amet, adipiscing justo
          </div>
          <div
            aria-hidden="true"
            class="ecl-banner-inpage__anchor"
          />
          <footer
            class="ecl-banner-inpage__credit"
          >
            © Copyright
          </footer>
        </div>
      </div>
    </a>
  </section>
</jest>
`;
